force-app/main/default/objects/Product2/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>A Product from the &quot;Training&quot; Family must have as Provider an Account with &quot;Trainings Provider&quot; Record Type</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Trainings_Provider</value>
        </filterItems>
        <filterItems>
            <field>$Source.Family</field>
            <operation>equals</operation>
            <value>Training</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trainings</relationshipLabel>
    <relationshipName>Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>