force-app/main/default/objects/Product2/validationRules/Cant_Create_Training_Without_DueDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Create_Training_Without_DueDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISNULL(Due_Date__c),
  RecordType.DeveloperName = &quot;Training&quot;
)</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Due Date cannot be null for Product with Training Record Type.</errorMessage>
</ValidationRule>