force-app/main/default/objects/Product2/validationRules/Cant_Create_Training_Without_Start_End.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Create_Training_Without_Start_End</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISNULL(Start__c),
  ISNULL(End__c),
  RecordType.DeveloperName = &quot;Training&quot;
)</errorConditionFormula>
    <errorMessage>Start and End cannot be null for Product with Training Record Type.</errorMessage>
</ValidationRule>