force-app/main/default/objects/Product2/validationRules/Training_Product_Must_Have_Training_Fam.validationRule-meta.xml
<ValidationRule>
    <fullName>Training_Product_Must_Have_Training_Fam</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  RecordType.DeveloperName = &quot;Training&quot;,
  NOT( ISPICKVAL( Family, &quot;Training&quot; ) )
)</errorConditionFormula>
    <errorDisplayField>Family</errorDisplayField>
    <errorMessage>Family must be &quot;Training&quot; for a Product with Training Record Type</errorMessage>
</ValidationRule>