force-app/main/default/objects/Product2/listViews/Trainings.listView-meta.xml
<ListView>
    <fullName>Trainings</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <columns>Provider__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Training</value>
    </filters>
    <label>Trainings</label>
</ListView>